--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_colorpicker: ^1.0.3
   google_fonts: ^2.3.2
   page_transition: ^2.0.5
 
