--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
     sdk: flutter
   flutter_colorpicker: ^1.0.3
   google_fonts: ^2.3.2
+  mqtt_client: ^9.6.7
   page_transition: ^2.0.5
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
