--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: rgb_bulb_app
-description: A new Flutter project.
+description: A bulb control app.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,10 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_colorpicker: ^1.0.3
+  flutter_launcher_icons: ^0.9.2
   google_fonts: ^2.3.2
   mqtt_client: ^9.6.7
   page_transition: ^2.0.5
   provider: ^6.0.2
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/rgbulb-icon.jpg"
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -51,8 +57,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
